# HAXAtom

./: .gitignore  ARCHITECTURE_STATUS.md  IMPLEMENTATION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  fix_all_json.py  start.bat  stop.bat  架构.md
backend/: .env.example  README.md  alembic.ini  init_memories.py  pyproject.toml  start.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  langsmith_tracer.py  preset_engine.py  rag_engine.py  state_types.py  tool_engine.py
backend/app/db/: __init__.py  init_data.py  session.py
backend/app/models/: __init__.py  base.py  conversation.py  knowledge_base.py  memory_config.py  model_config.py  plugin_config.py  preset.py  prompt_config.py
backend/app/plugins/: __init__.py  base.py  loader.py  registry.py  tool_adapter.py
backend/app/schemas/: __init__.py  chat.py  common.py  export.py  knowledge_base.py  memory_config.py  model_config.py  preset.py  prompt_config.py
backend/app/services/: __init__.py  conversation_service.py  export_service.py  knowledge_base_service.py  memory_service.py  vector_store_service.py
backend/tests/: check_conversation.py  check_model_config.py  create_test_preset.py  fix_model_config.py  test_chat_api.py  test_full_workflow.py  test_full_workflow_api.py  test_langgraph_workflow.py  test_memory_system.py  test_memory_via_api.py  test_resource_validation.py  test_tool_calling.py  update_model_to_list.py
backend/web/: index.html
backend/web/assets/: BotPage-1SZkzO43.js  BotPage-B-iPcTWu.js  BotPage-B81qWNGF.js  BotPage-BFRhfX2T.js  BotPage-BLvJp2IW.js  BotPage-B_CyBbIk.js  BotPage-BbkQs9j5.js  BotPage-CFnCb_xA.css  BotPage-CJahlwQ4.js  BotPage-CMBxF6DY.js  BotPage-CrY_YuRt.js  (+248 more)
(+70 files in other folders)
