[tool.poetry]
name = "haxatom"
version = "0.1.0"
description = "一款「原子化解耦、乐高式拼装」的全栈AI智能体管理与多端分发平台"
authors = ["HAXAtom Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

# LangChain生态（必须使用最新稳定版）
langchain-core = "^0.3.0"
langchain = "^0.3.0"
langgraph = "^0.2.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-ollama = "^0.2.0"
langchain-chroma = "^0.1.0"
langchain-text-splitters = "^0.3.0"

# Web框架
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sse-starlette = "^2.1.0"

# 数据与配置
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
pyyaml = "^6.0.2"

# 数据库
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
alembic = "^1.13.0"
aiosqlite = "^0.20.0"

# 向量存储（本地场景）
chromadb = "^0.5.0"
chroma-hnswlib = "0.7.5"

# 可观测性
langsmith = "^0.1.0"

# 其他
httpx = "^0.27.0"
python-multipart = "^0.0.12"
cryptography = "^43.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
black = "^24.8.0"
isort = "^5.13.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
